// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gets difference between more than two arrays 1`] = `
Array [
  "a",
  "e",
]
`;

exports[`gets difference between two arrays 1`] = `
Array [
  "a",
  "d",
]
`;
